@@ -35,6 +35,14 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -42,6 +50,9 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.web/com.sun.javafx.webkit=BlueBirdConnector</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -49,7 +60,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>BlueBirdConnector</mainClass>
+                    <mainClass>com.birdbraintechnologies.bluebirdconnector.BlueBirdConnector</mainClass>
                 </configuration>
             </plugin>
         </plugins>
